src/test/ui/lifetimes/lifetime-elision-return-type-trait.stderr
error[E0277]: the trait bound `std::result::Result<(), _>: Future` is not satisfied
  --> $DIR/lifetime-elision-return-type-trait.rs:8:13
   |
LL | fn foo() -> impl Future<Item=(), Error=Box<dyn Error>> {
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |                                            ^^^^^^^^^ help: consider giving it a 'static lifetime: `dyn Error + 'static`
=======
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Future` is not implemented for `std::result::Result<(), _>`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
   = note: the return type of a function must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
